登录-用户名密码登录

--- a/application.yml
+++ b/application.yml
@@ -8,3 +8,6 @@ mysql:
   params: charset=utf8mb4&parseTime=True&loc=Local
   username: root
   password: pass1234
+jwt:
+  secret: lghlmcl
+  expirationTime: 10800
