--- a/application.yml
+++ b/application.yml
@@ -23,4 +23,14 @@ third:
     ipAttributionUrl: https://qryip.market.alicloudapi.com/lundear/qryip
     phoneSendVerifyCodeUrl: https://dfsns.market.alicloudapi.com/data/send_sms
     phoneSendVerifyCodeTemplateId: TPL_0001
-    phoneVerifyCodeExpireMin: 30
+    phoneVerifyCodeExpireMin: 5
+email:
+  fromAccount: ycq <903421928@qq.com>
+  emailServerAddr: smtp.qq.com:25
+  host: smtp.qq.com
+  username: 903421928@qq.com
+  authorizationCode: jrwfxdmbzphzbcgj
+  emailVerifyCodeExpireMin: 5
+regexp:
+  phone: ^1(3[0-9]|4[01456879]|5[0-35-9]|6[2567]|7[0-8]|8[0-9]|9[0-35-9])\d{8}$
+  email: ^([a-zA-Z\d][\w-]{2,})@(\w{2,})\.([a-z]{2,})(\.[a-z]{2,})?$
